# dolfinx_materials

./: .buildinfo  .gitignore  README.md  cvxpy.html  genindex.html  index.html  intro.html  jax.html  jax_elastoplasticity.html  mfront.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  test_nonlinear_elasticity.py  test_nonlinear_elasticity_mfront.py  test_plastic_plate_bending.py  test_plasticity.py  test_plasticity_mfront.py  uniaxial_test.py
_autosummary/: dolfinx_materials.html  dolfinx_materials.jax_materials.elasticity.html  dolfinx_materials.jax_materials.elastoplasticity.html  dolfinx_materials.jax_materials.html  dolfinx_materials.jax_materials.nonlinear_elasticity.html  dolfinx_materials.jax_materials.tensors.html  dolfinx_materials.jax_materials.viscoelasticity.html  dolfinx_materials.jax_newton_solver.html  dolfinx_materials.material.generic.html  dolfinx_materials.material.html  dolfinx_materials.material.jax.html  dolfinx_materials.material.jax.jax_material.html  dolfinx_materials.material.jax.jax_newton_solver.html  dolfinx_materials.material.mfront.html  dolfinx_materials.material.tann.html  dolfinx_materials.python_materials.elasticity.html  dolfinx_materials.python_materials.elastoplasticity.html  dolfinx_materials.python_materials.html  dolfinx_materials.python_materials.nonlinear_elasticity.html  dolfinx_materials.python_materials.tensors.html  dolfinx_materials.python_materials.viscoelasticity.html  dolfinx_materials.quadrature_function.html  dolfinx_materials.quadrature_map.html  dolfinx_materials.solvers.html  (+16 more)
(+224 files in other folders)
