[metadata]
name = dolfinx_materials
version = 0.4.0
author = Jeremy Bleyer
author_email = jeremy.bleyer@enpc.fr
description = Advanced material modeling in FEniCSx
long_description = file: README.md
keywords = material science

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    petsc4py
    mpi4py
    fenics-dolfinx>=0.10.0
    jax
    jaxmat>=0.0.1

[options.extras_require]
mfront =
    mgis
cvxpy = 
    cvxpy
